<resources>
    <string name="app_name">client-side</string>
    <string name="auth_button_form">Login</string>
    <string name="input_login_text">Username:</string>
    <string name="input_password_text">Password</string>
    <string name="auth_button">Login</string>
    <string name="login_is_empty_message">Please enter your username</string>
    <string name="password_is_empty_message">Please enter your password</string>
    <string name="base_url">http://10.0.2.2:8080/</string>
    <string name="error_403">Wrong login or password</string>
    <string name="logout_text">Logout</string>
    <string name="name_is_empty_message">Please enter your name</string>
    <string name="surname_is_empty_message">Please enter your last name</string>
    <string name="email_is_empty_message">Please enter your email</string>
    <string name="gender_is_empty_message">Please enter your gender</string>
    <string name="passwords_are_not_equals">Password mismatch</string>
    <string name="specify_your_gender">Please enter your gender</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="my_page">My page</string>
    <string name="test_list">To the list of tests</string>
    <string name="name">Name: </string>
    <string name="surname">Surname: </string>
    <string name="middleName">Middle name: </string>
    <string name="email">Email</string>
    <string name="gender">Gender: </string>
    <string name="change_personal_info_button">Change the data</string>
    <string name="change_personal_info_success">Your personal data has been successfully changed</string>
    <string name="your_taken_tests">The tests you took</string>
    <string name="to_statistics">View statistics</string>
    <string name="input_question">Enter your question</string>
    <string name="input_answer">Enter your answer</string>
    <string name="input_answer_value">Enter the price of the answer</string>
    <string name="input_result">Enter the result</string>
    <string name="input_result_min_border">Enter the lower bound of the result</string>
    <string name="input_result_max_border">Enter the upper bound of the result</string>
    <string name="input_test_name">Enter test title</string>
    <string name="input_test_description">Enter a description for the test</string>
    <string name="input_test_average_time">Enter estimated time</string>
    <string name="input_proceeding_type">Specify the type of processing</string>
    <string name="ariphemtic">Average</string>
    <string name="geometric">Geometric mean</string>
    <string name="continue_button">Continue</string>
    <string name="title_is_null_message">Specify the name of the test</string>
    <string name="description_is_null_message">Provide a description of the test</string>
    <string name="expected_time_is_null_message">Indicate the approximate time</string>
    <string name="processing_type_is_not_specified_message">Specify the type of processing</string>
    <string name="question_is_null_message">Enter your question text</string>
    <string name="answer_is_null_message">Enter answer text</string>
    <string name="answer_value_is_null">Enter the price of the answer</string>
    <string name="answer_value_NaN">Price must be a number</string>
    <string name="result_is_null_message">Enter the result text</string>
    <string name="borders_are_equal">Result boundaries cannot be the same</string>
    <string name="border_value_is_NaN">The border must be a number</string>
    <string name="create_test">Create test</string>
    <string name="login">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="registration_button">Registration</string>
    <string name="registration_success">Registration success</string>
    <string name="rest_error">Error while accessing the server</string>
    <string name="language_button">RU</string>
    <string name="question_counter">You are on [current] question from [all]</string>
    <string name="total_time">Taken time (seconds)</string>
    <string name="legend">
Chart legend: your results are located vertically.
        Their decoding [dec].
    Horizontal - attempt number</string>
    <string name="test_create">Test created</string>
    <string name="test_description">Test description: </string>
    <string name="go_to_test">Go to test</string>
</resources>