<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="102dp"
        android:text="@string/input_test_name" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="166dp"
        android:text="@string/input_test_description" />

    <EditText
        android:id="@+id/etTestName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="18dp"
        android:layout_toEndOf="@+id/textView17"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etTestDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="17dp"
        android:layout_toEndOf="@+id/textView18"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="373dp"
        android:text="@string/input_proceeding_type" />

    <RadioButton
        android:id="@+id/rbArih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="21dp"
        android:layout_toEndOf="@+id/textView19"
        android:text="@string/ariphemtic" />

    <RadioButton
        android:id="@+id/rbGeom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="26dp"
        android:layout_toEndOf="@+id/textView19"
        android:text="@string/geometric" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="248dp"
        android:text="@string/input_test_average_time" />

    <EditText
        android:id="@+id/etTestExpectedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/textView20"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="137dp"
        android:layout_marginBottom="152dp"
        android:onClick="goToQuestionsAndAnswers"
        android:text="@string/continue_button" />


</RelativeLayout>