<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="51dp"
        android:text="@string/input_result"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="56dp" />

    <EditText
        android:id="@+id/etResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/textView21"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="181dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="97dp"
        android:text="@string/input_result_min_border" />

    <EditText
        android:id="@+id/etMinBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="9dp"
        android:layout_toEndOf="@+id/textView22"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="152dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="159dp"
        android:text="@string/input_result_max_border" />

    <EditText
        android:id="@+id/etMaxBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="9dp"
        android:layout_toEndOf="@+id/textView23"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="297dp"
        android:onClick="saveCustomTest"
        android:text="@string/continue_button" />
</RelativeLayout>